# pytest-mapping-fixtures

./: MANIFEST.in  README.md  pyproject.toml
pytest_mapping_fixtures/: __init__.py  simple.py
pytest_mapping_fixtures/_util/: __init__.py  importlib_.py
